# dynamic-parallax

./: .gitignore  README.md  pyproject.toml
data/: bolometric_corrections_I.csv  bolometric_corrections_III.csv  bolometric_corrections_V.csv  dependence_luminocity_on_mass.csv  init_params_of_double_stars.csv
src/: bolometric_correction.py  main.py  mass_correction.py
src/calculations/: __init__.py  calculations.py
src/corrections/: __init__.py  bolometric_correction.py  mass_correction.py
src/doublestardata/: __init__.py  doublestardata.py
