[tool.poetry]
name = "dynamic-parallax"
version = "0.1.0"
description = ""
authors = ["Adel Ahmetgaliev <adel.ahmetgaliev@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
